# evotoolkit

./: .gitattributes  .gitignore  .readthedocs.yaml  404.html  CHANGELOG.md  CNAME  CONTRIBUTING.md  README.md  REVIEWED_SURFACE.md  SOFTWARE_IMPROVEMENTS_FROM_PRIOR_WORK.md  TESTING.md  coverage-full.ini  coverage-reviewed.ini  index.html  mkdocs.yml  mkdocs_hooks.py  objects.inv  pyproject.toml  requirements-docs.txt  sitemap.xml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml
api/: index.html
api/core/: index.html
api/core/base-config/: index.html
api/core/base-run-state-dict/: index.html
api/core/base-task/: index.html
api/core/history-manager/: index.html
api/core/list-algorithms/: index.html
api/core/list-tasks/: index.html
api/core/method/: index.html
api/core/operators/: index.html
api/core/solution/: index.html
api/core/solve/: index.html
api/interfaces/: index.html
api/interfaces/base-method-interface/: index.html
api/interfaces/cuda/: index.html
api/interfaces/python/: index.html
api/methods/: index.html
api/methods/eoh/: index.html
api/methods/evoengineer/: index.html
api/methods/funsearch/: index.html
api/tasks/: index.html
api/tools/: index.html
api/tools/https-api/: index.html
development/architecture/: index.html
development/contributing/: index.html
docs/: extensions.md  extensions.zh.md  getting-started.md  getting-started.zh.md  index.md  index.zh.md  installation.md  installation.zh.md  migration.md  migration.zh.md  quickstart.md  quickstart.zh.md  requirements.txt
docs/api/: core.md  core.zh.md  index.md  index.zh.md  interfaces.md  interfaces.zh.md  methods.md  methods.zh.md  tasks.md  tasks.zh.md  tools.md  tools.zh.md
docs/api/core/: base-config.md  base-config.zh.md  base-run-state-dict.md  base-run-state-dict.zh.md  base-task.md  base-task.zh.md  history-manager.md  history-manager.zh.md  list-algorithms.md  list-algorithms.zh.md  list-tasks.md  list-tasks.zh.md  method-state.zh.md  method.md  method.zh.md  operators.md  operators.zh.md  run-store.zh.md  solution.md  solution.zh.md  solve.md  solve.zh.md
docs/api/interfaces/: base-method-interface.md  base-method-interface.zh.md
docs/api/methods/: eoh.md  eoh.zh.md  evoengineer.md  evoengineer.zh.md  funsearch.md  funsearch.zh.md
docs/api/tools/: https-api.md  https-api.zh.md
docs/development/: architecture.md  architecture.zh.md  contributing.md  contributing.zh.md
docs/getting-started/: exploring-results.md  exploring-results.zh.md  first-optimization.md  first-optimization.zh.md  next-steps.md  next-steps.zh.md  try-algorithms.md  try-algorithms.zh.md  understanding-code.md  understanding-code.zh.md
docs/installation/: env-managers.md  env-managers.zh.md  from-source.md  from-source.zh.md  llm-and-verify.md  llm-and-verify.zh.md  pypi.md  pypi.zh.md  requirements.md  requirements.zh.md  troubleshooting.md  troubleshooting.zh.md
docs/stylesheets/: extra.css
docs/tutorials/: advanced-overview.md  advanced-overview.zh.md  built-in-overview.md  built-in-overview.zh.md  customization-overview.md  customization-overview.zh.md  index.md  index.zh.md
docs/tutorials/advanced/: configuration.md  configuration.zh.md  debugging.md  debugging.zh.md  internals.md  internals.zh.md  low-level-api.md  low-level-api.zh.md
docs/tutorials/built-in/: adversarial-attack.md  adversarial-attack.zh.md  cann-init.md  cann-init.zh.md  control-box2d.md  control-box2d.zh.md  cuda-task.md  cuda-task.zh.md  prompt-engineering.md  prompt-engineering.zh.md  scientific-regression.md  scientific-regression.zh.md
docs/tutorials/customization/: custom-task.md  custom-task.zh.md  customizing-evolution.md  customizing-evolution.zh.md
docs_core/: installation.md  quickstart.md
examples/adversarial_attack/: README.md  README.zh.md  basic_example.py
examples/cann_init/: .env.example  .gitignore  0_test_task.py  1_signature_parser.py  2_template_generator.py  3_basic_evaluation.py  4_parallel_compile.py  5_cann_initer_agent.py  5_decoupled_workflow.py  6_knowledge_retrieval.py  README.md  _config.py  knowledge_index.json
examples/cann_init/0_test_task_src/: kernel_src.cpp  python_reference.py  tiling_config.py
examples/cann_init/agent/: .env.example  11_knowledge_learner.py  12_batch_test.py  1_knowledge_retrieval.py  (+9 more)
examples/cuda_task/: README.md  README.zh.md  basic_example.py  compare_algorithms.py  custom_prompt.py  dataset_example.py
examples/custom_task/: my_custom_task.py
examples/lunar_lander/: README.md  basic_example.py  watch_policy.py
examples/prompt_optimization/: README.md  README.zh.md  basic_example.py
examples/scientific_regression/: README.md  README.zh.md  basic_example.py  compare_algorithms.py  custom_prompt.py
getting-started/: index.html
getting-started/exploring-results/: index.html
getting-started/first-optimization/: index.html
getting-started/next-steps/: index.html
getting-started/try-algorithms/: index.html
getting-started/understanding-code/: index.html
installation/: index.html
installation/env-managers/: index.html
installation/from-source/: index.html
installation/llm-and-verify/: index.html
installation/pypi/: index.html
installation/requirements/: index.html
installation/troubleshooting/: index.html
search/: search_index.json
src/evotoolkit/: __init__.py  _legacy.py  registry.py
tests/: README.md  conftest.py  test_evaluator_integration.py  test_evaluator_unit.py
tests/integration/: test_explicit_run_api.py  test_solve_api.py
tests/unit/: test_data_management.py  test_data_management_extended.py  test_legacy_imports.py  test_llm_api.py  test_registry.py  test_registry_extended.py  test_top_level_api.py
tutorials/: index.html
tutorials/advanced-overview/: index.html
tutorials/built-in-overview/: index.html
tutorials/customization-overview/: index.html
zh/: index.html
zh/api/: index.html
zh/getting-started/: index.html
zh/installation/: index.html
zh/tutorials/: index.html
(+345 files in other folders)
