[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "evotoolkit"
version = "1.0.0rc6"
description = "LLM-driven code evolution method library."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Ping Guo", email = "pguo6680@gmail.com"},
]
keywords = ["evolutionary", "optimization", "LLM", "toolkit"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy",
    "scipy",
    "python-dotenv",
]
[dependency-groups]
dev = [
    "build>=1.3.0",
    "hatchling>=1.27.0",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.21",
    "mkdocs-static-i18n>=1.3.0",
    "mkdocstrings[python]>=0.30.1",
    "ruff>=0.8.4",
    "twine>=6.2.0",
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.optional-dependencies]
# CUDA kernel optimization task
# Note: Install PyTorch separately to match your CUDA version
# See: https://pytorch.org/get-started/locally/
cuda_engineering = [
    "ninja",
    "portalocker",
    # "torch",  # Removed - users install their own version
    "psutil"
]

# Prompt engineering task (requires LLM evaluation)
prompt_engineering = [
    # No specific dependencies beyond base requirements
    # Uses LLM API for evaluation
]

# Scientific symbolic regression task (requires scipy for optimization)
scientific_regression = [
    "scipy",  # For parameter optimization in evaluator
    "pandas",  # For loading CSV datasets
]

# Adversarial attack evolution task
# Note: Install PyTorch with GPU support first (CUDA 12.6 recommended)
# See installation guide in docs/tutorials/adversarial-attack.md
adversarial_attack = [
    # "torch",  # Removed - users install GPU version first
    # "torchvision",  # Removed - users install GPU version first
    "timm",  # PyTorch Image Models (for CIFAR-10 pretrained models)
    "foolbox",  # For adversarial attack framework
]

# Control tasks with Box2D physics (LunarLander, BipedalWalker, etc.)
control_box2d = [
    "gymnasium[box2d]",  # Gymnasium with Box2D environments
]

# Huawei Ascend / CANN operator generation helpers
# Note: the vendor CANN toolkit must still be installed manually.
cann_init = [
    "pybind11",
]

# All experimental tasks
all_tasks = [
    "ninja",
    "portalocker",
    "torch",
    "torchvision",
    "psutil",
    "scipy",
    "pandas",
    "foolbox",
    "gymnasium[box2d]",
    "pybind11",
]

[project.urls]
Homepage = "https://github.com/pgg3/evotoolkit"
Repository = "https://github.com/pgg3/evotoolkit"
Documentation = "https://pgg3.github.io/evotoolkit/"

[tool.hatch.build.targets.wheel]
packages = ["src/evotoolkit"]

[tool.hatch.build.targets.sdist]
include = ["src/evotoolkit"]

[tool.ruff]
line-length = 160
target-version = "py310"
exclude = [
    "src/evotoolkit/evo_method/cann_initer",
    "src/evotoolkit/task/cann_init",
]

[tool.ruff.lint]
select = ["E", "F", "I"]  # E: pycodestyle errors, F: pyflakes, I: isort
ignore = ["E501"]  # Ignore line length for long prompt templates

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports for registration side-effects

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "cuda: marks tests requiring CUDA hardware",
    "llm: marks tests requiring a real LLM API key",
]

[tool.coverage.run]
source = ["src/evotoolkit"]
omit = [
    "*/cann_initer/*",
    "*\\cann_initer\\*",
    "*/cann_init/*",
    "*\\cann_init\\*",
    "*/cuda_engineering/*",
    "*\\cuda_engineering\\*",
]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__",
    "raise NotImplementedError",
]
