[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "evotoolkit"
version = "1.0.2"
description = "Core SDK for LLM-driven evolutionary search over executable or structured solutions."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Ping Guo", email = "pguo6680@gmail.com"},
]
keywords = ["evolutionary", "optimization", "LLM", "toolkit"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "numpy",
    "scipy",
]
[dependency-groups]
dev = [
    "build>=1.3.0",
    "hatchling>=1.27.0",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.21",
    "mkdocs-static-i18n>=1.3.0",
    "ruff>=0.8.4",
    "twine>=6.2.0",
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.urls]
Homepage = "https://github.com/pgg3/evotoolkit"
Repository = "https://github.com/pgg3/evotoolkit"
Documentation = "https://evotoolkit.readthedocs.io/"
Changelog = "https://github.com/pgg3/evotoolkit/blob/main/CHANGELOG.md"

[tool.hatch.build]
ignore-vcs = true
exclude = [
    "/.gitignore",
]

[tool.hatch.build.targets.wheel]
packages = ["src/evotoolkit"]

[tool.hatch.build.targets.sdist]
only-include = [
    "src/evotoolkit",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "examples/custom_task",
]

[tool.ruff]
line-length = 160
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]  # E: pycodestyle errors, F: pyflakes, I: isort
ignore = ["E501"]  # Ignore line length for long prompt templates

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports for registration side-effects

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "cuda: marks tests requiring CUDA hardware",
    "llm: marks tests requiring a real LLM API key",
]

[tool.coverage.run]
source = ["src/evotoolkit"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__",
    "raise NotImplementedError",
]
